fixing navbar spacing

--- a/sass/club.scss
+++ b/sass/club.scss
@@ -115,14 +115,14 @@ nav {
     #toggle {
         color: $blue;
         font-size: 2rem;
-        margin: 0px 20px 20px 0px;
+        margin-right: 20px;
         display: none;
         cursor: pointer;
     }
 
     #logo {
         border: none;
-        margin: 0px 0px 20px;
+        margin: 0px;
 
         img {
             width: 75px;
@@ -624,7 +624,6 @@ section {
     // Navigation
     nav {
         width: 100%;
-        padding-bottom: 0;
         height: auto;
         background-color: $off-white;
 
